force-app/main/default/objects/BMCServiceDesk__BMC_Memory__c/BMCServiceDesk__BMC_Memory__c.object-meta.xml
<CustomObject>
    <description>BMC_Memory: CMDB Class</description>
    <label>Memory</label>
    <nameField>
        <label>BMC_Memory Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Memory</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>