force-app/main/default/objects/BMCServiceDesk__BMC_Memory__c/fields/BMCServiceDesk__Capacity__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Capacity__c</fullName>
    <label>Capacity</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>