force-app/main/default/objects/BMCServiceDesk__BMC_Memory__c/fields/BMCServiceDesk__FormFactor__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__FormFactor__c</fullName>
    <label>Form Factor</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>SIP</fullName>
            </value>
            <value>
                <fullName>DIP</fullName>
            </value>
            <value>
                <fullName>ZIP</fullName>
            </value>
            <value>
                <fullName>SOJ</fullName>
            </value>
            <value>
                <fullName>Proprietary</fullName>
            </value>
            <value>
                <fullName>SIMM</fullName>
            </value>
            <value>
                <fullName>DIMM</fullName>
            </value>
            <value>
                <fullName>TSOP</fullName>
            </value>
            <value>
                <fullName>PGA</fullName>
            </value>
            <value>
                <fullName>RIMM</fullName>
            </value>
            <value>
                <fullName>SODIMM</fullName>
            </value>
            <value>
                <fullName>SRIMM</fullName>
            </value>
            <value>
                <fullName>SMD</fullName>
            </value>
            <value>
                <fullName>SSMP</fullName>
            </value>
            <value>
                <fullName>QFP</fullName>
            </value>
            <value>
                <fullName>TQFP</fullName>
            </value>
            <value>
                <fullName>SOIC</fullName>
            </value>
            <value>
                <fullName>LCC</fullName>
            </value>
            <value>
                <fullName>PLCC</fullName>
            </value>
            <value>
                <fullName>BGA</fullName>
            </value>
            <value>
                <fullName>FPBGA</fullName>
            </value>
            <value>
                <fullName>LGA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>