force-app/main/default/objects/BMCServiceDesk__BMC_Memory__c/fields/BMCServiceDesk__Replaceable__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Replaceable__c</fullName>
    <label>Replaceable</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>